# InboxPilot

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
config/: defaults.json
data/: mock_meetings.json  mock_messages.json
docs/: agile-plan.md  architecture.md  coding-standards.md  commit-log.md  domain-model.md  future-work.md  implementation-plan.md  migration-strategy.md  mvp-status.md  super-prompt.md  tech-stack.md
docs/change-log-detailed/: CL-0001.md  CL-0002.md  CL-0003.md  CL-0004.md  CL-0005.md  CL-0006.md  CL-0007.md  CL-0008.md  CL-0009.md  CL-0010.md  CL-0011.md  CL-0012.md  CL-0013.md  CL-0014.md  CL-0015.md  CL-0016.md  CL-0017.md  CL-0018.md  CL-0019.md  CL-0020.md  CL-0021.md  CL-0022.md  CL-0023.md  CL-0024.md  CL-0025.md  CL-0026.md  CL-0027.md  CL-0028.md  CL-0029.md  CL-0030.md  CL-0031.md  CL-0032.md  CL-0033.md  CL-0034.md  CL-0035.md  CL-0036.md  CL-0037.md  CL-0038.md
src/inboxpilot/: __init__.py  ai.py  api.py  app.py  calendar.py  category_templates.py  classifier.py  cli.py  config.py  email.py  models.py  oauth.py  services.py  token_codec.py
src/inboxpilot/storage/: __init__.py  sqlite_store.py
tests/: test_ai.py  test_ai_audit.py  test_api.py  test_api_keys.py  test_calendar.py  test_calendar_ics.py  test_classifier.py  test_config.py  test_connections.py  test_email_eml.py  test_email_gmail.py  test_email_outlook.py  test_meeting_notes.py  test_meeting_search.py  test_message_insights.py  test_oauth.py  test_stats.py  test_storage.py  test_tasks.py  test_tokens.py  test_triage.py
web/: index.html
