[project]
name = "inboxpilot"
version = "0.1.0"
description = "Local-first personal communication assistant with pluggable AI and integrations."
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["inboxpilot"]

[tool.ruff]
line-length = 100
select = ["D", "E", "F", "I"]
ignore = ["D203", "D212"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
